--- a/UserStyles/UserDashboard.css
+++ b/UserStyles/UserDashboard.css
@@ -25,14 +25,20 @@
     color: var(--text-light);
 }
 
+.profile-arrow {
+    margin-left: 5px;
+    font-size: 20px;
+    color: var(--text-light);
+}
+
+
 .menu-options {
     padding: 0;
     border-radius: 8px;
-    position: absolute;
-    top: 55px; 
-    right: 0;
+    position: fixed;
+    top:100px;
     width: 180px;
-    z-index: 1000;
+    z-index: 9999;
     background-color: var(--bg-primary);
     border: 1px solid var(--border-color);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
@@ -71,7 +77,7 @@
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s ease, visibility 0s 0.3s;
-    z-index: 999;
+    z-index: 9998;
 }
 
 .overlay.show {
