--- a/componentStyles/Navbar.css
+++ b/componentStyles/Navbar.css
@@ -5,7 +5,7 @@
     width: 100%;
     background-color: var(--bg-primary);
     box-shadow: var(--shadow-sm);
-    z-index: 1000;
+    z-index: 10000;
     display: flex;
     flex-direction: column;
 }
